# sea-orm-adapter

./: .rustfmt.toml  CHANGELOG.md  Cargo.toml  README.md
src/: action.rs  adapter.rs  entity.rs  ext.rs  lib.rs  migration.rs
